# protoblade

./: .readthedocs.yaml  LICENSE  README.rst  pyproject.toml
.github/workflows/: build.yml  python-app.yml
docs/source/: _install.rst  _intro.rst  build_me.txt  conf.py  endwalls.rst  examples.rst  glossary.rst  index.rst  input_files.rst  installation.rst  nomenclature.rst  requirements.txt  section_def.rst  usage.rst
docs/source/scripts/: create_plots.py
examples/axial_turbine/: axial_turbine.toml  hub.fpd  shroud.fpd  vki_ps.fpd  vki_ss.fpd
examples/axial_turbine_with_cavity/: axial_turbine_with_cavity.toml  with_cavity.step
src/protoblade/: __main__.py  blade.py  cad.py  cli.py  geom.py  machine.py  stage.py
tests/: conftest.py  pytest.ini  test_blade.py  test_cad.py  test_examples.py  test_geom.py  test_machine.py  test_stage.py
tests/fixtures/: example_blade_config.toml  example_blade_config_step_endwall.toml  example_machine_config.toml  example_machine_config_step_endwall.toml
tests/fixtures/naca0012/: naca0012_lower.fpd  naca0012_upper.fpd  s_interp.npy  x_interp.npy  y_interp.npy
tests/fixtures/vki_turbine/: blade.step  endwalls.step  final.step  final_with_cavity.step  mid_lines.npy  periodic.step  vki_ps_sections.npy  vki_ps_single.fpd  vki_ss_sections.npy  vki_ss_single.fpd
