[tool.poetry]
name = "protoblade"
version = "0.0.1"
description = ""
authors = ["Tesseract Software"]
license = "Apache Software Licence"
readme = "README.rst"

[tool.poetry.dependencies]
python = "~3.8 | ~3.9 | ~3.10 | ~3.11"
numpy = "*"
scipy = "*"
cadquery= "*"
tomli ="*"
tomli_w ="*"
tomlkit = "*"
atom = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
matplotlib = "^3.7.2"
sphinx= "*"
sphinxcontrib-globalsubs = "*"
flake8='*'
pydocstyle='*'
pydoclint='*'
coverage='*'
pytest-cov='*'
codecov='*'
pytest-mock='*'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
