[tool.poetry]
name = "protoblade"
version = "0.0.0"
description = ""
authors = ["Tesseract Software"]
license = "Apache Software Licence"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
scipy = "*"
cadquery= "*"
tomli ="*"
tomli_w ="*"
tomlkit = "*"
atom = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.1"
matplotlib = "^3.7.2"
sphinx= "*"
sphinxcontrib-globalsubs = "*"
flake8='*'
pydocstyle='*'
pydoclint='*'
coverage='*'
pytest-cov='*'
codecov='*'
pytest-mock='*'


[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
